# GameOfLifeCpp

./: CMakeLists.txt
src/: test.cpp
